--- a/gui/templates/news.html
+++ b/gui/templates/news.html
@@ -31,11 +31,14 @@
 	<div class="col s12 m6">
 	  <div class="card">
 	    <div class="card-image">
+	    	<a href="#modal{{n.pk}}">
 	      <img src="/media/{{n.imagen}}" class='responsive-img'> 
+	      </a>
 	    </div>
 	    <div class="card-content">
+	    	<a href="#modal{{n.pk}}">
 	    	<span class="card-title">{{n.title}}</span>
-	    	
+	    	</a>
 	      <p>{{n.resumen}}</p>
 	      <a href="{% url 'gui:updateNews' n.pk %}" id='{{n.pk}}'><span class="new badge" data-badge-caption="Editar"></span></a>
 	      <a href="{% url 'gui:deleteNews' n.pk %}" id='{{n.pk}}'><span class="new badge red" data-badge-caption="Eliminar"></span></a>
@@ -43,6 +46,19 @@
 	    </div>
 	  </div>
 	</div>
+	<div id="modal{{n.pk}}" class="modal">
+    <div class="modal-content">
+      <h4>{{n.title}}</h4>
+      <p>{{n.resumen}}</p>
+      <p>{{n.content}}</p>
+      <div class="card-image center">
+	      <img src="/media/{{n.imagen}}" class='responsive-img'> 
+	    </div>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cerrar</a>
+    </div>
+  </div>
 	{% endfor %}
 	{% endif %}
 </div>
