--- a/gui/templates/news.html
+++ b/gui/templates/news.html
@@ -14,7 +14,10 @@
 	<div class="col s11">
 		<ul class="pagination center">
 			<li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-			<li class="active"><a href="#!">1</a></li>
+			
+			{% for p in pages %}
+				<li class="{{p.class}}"><a href="{% url 'gui:pageNews' p.p%}">{{p.p}}</a></li>
+			{% endfor %}
 			<li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
 		</ul>
 	</div>
