--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -92,7 +92,7 @@
         <div class="col s7 "><div class="card-panel red franjaIzquierda"></div></div>
       </div>
       <div class="row">
-        <div class="col s12 m12 l4"><div id="auxLogos"></div><center><img class="responsive-img" src="{% static 'gui/img/logos.png' %}" id='bid'></div></center>
+        <div class="col s12 m12 l4"><center><img class="responsive-img" src="{% static 'gui/img/logos.png' %}" id='bid'></div></center>
         <div class="col s12 m12 l4">
           <div id="auxOtic"></div>
           <center><img class="responsive-img" src="{% static 'gui/img/otic.png' %}" id='otic'></center>
